--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "prisma:seed": "npx prisma db seed",
+    "prisma:push": "npx prisma db push",
+    "prisma:pull": "npx prisma db pull",
+    "prisma:viewer": "npx prisma migrate dev --create-only",
+    "prisma:create": "npx prisma migrate dev",
+    "prisma:deploy": "npx prisma migrate deploy",
     "prepare": "husky install",
     "commit": "cz",
     "lint-staged": "lint-staged",
@@ -24,8 +32,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -50,6 +60,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.0",
+    "prisma": "^5.3.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
@@ -98,6 +109,7 @@
     "nest": ">= 10",
     "jest": ">= 29",
     "fastify": ">= 4",
-    "typescript": ">= 5"
+    "typescript": ">= 5",
+    "postgresql": ">= 16"
   }
 }
