--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "release": "standard-version --no-verify"
   },
   "dependencies": {
+    "@fastify/swagger": "^8.10.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.2.6",
+    "@nestjs/swagger": "^7.1.12",
     "@prisma/client": "^5.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "fastify": "^4.23.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
