--- a/package.json
+++ b/package.json
@@ -5,6 +5,18 @@
   "author": "Lý Tại Trường",
   "private": true,
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lytaitruong/nestjs-monolith-boilerplate.git"
+  },
+  "keywords": [
+    "boilerplate",
+    "nodejs",
+    "nestjs",
+    "bun",
+    "prisma",
+    "postgresql"
+  ],
   "scripts": {
     "build": "nest build",
     "format": "prettier --write src/**/*.ts test/**/*.ts",
@@ -31,6 +43,7 @@
     "release": "standard-version --no-verify"
   },
   "dependencies": {
+    "@fastify/static": "^6.11.2",
     "@fastify/swagger": "^8.10.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -42,6 +55,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.23.2",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -53,6 +67,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
