--- a/package.json
+++ b/package.json
@@ -43,19 +43,30 @@
     "release": "standard-version --no-verify"
   },
   "dependencies": {
+    "@fastify/compress": "^6.4.0",
+    "@fastify/cookie": "^9.1.0",
+    "@fastify/csrf-protection": "^6.3.0",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/multipart": "^8.0.0",
     "@fastify/static": "^6.11.2",
     "@fastify/swagger": "^8.10.1",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.23.2",
     "lodash": "^4.17.21",
+    "nestjs-pino": "^3.5.0",
+    "pino-http": "^8.5.0",
+    "pino-pretty": "^10.2.0",
+    "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
