--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
@@ -62,8 +64,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.23.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nestjs-pino": "^3.5.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pino-http": "^8.5.0",
     "pino-pretty": "^10.2.0",
     "prisma-pagination": "^0.2.3",
@@ -80,6 +85,8 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
+    "@types/passport": "^1.0.13",
+    "@types/passport-jwt": "^3.0.10",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
