--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,25 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - postgres_db:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+    volumes:
+      - postgres_db:/var/lib/postgresql/data
+    env_file:
+      - .env
+
+  redis:
+    container_name: redis
+    image: redis:7.2
+    restart: always
+    command: redis-server --requirepass $IOREDIS_PASSWORD --appendonly yes
+    ports:
+      - 6379:6379
+    volumes:
+      - redis:/data
     env_file:
       - .env
 
 volumes:
+  redis:
   postgres_db:
