--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@fastify/static": "^6.11.2",
     "@fastify/swagger": "^8.10.1",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -58,6 +59,8 @@
     "@nestjs/swagger": "^7.1.12",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.3.1",
+    "cache-manager": "^5.2.3",
+    "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.23.2",
