--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "build": "nest build",
     "format": "prettier --write src/**/*.ts test/**/*.ts",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:pro": "node dist/main",
+    "start:dev": "nest start --watch --exec \"bun run\"",
+    "start:pro": "bun run dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:generate": "npx prisma generate",
-    "prisma:studio": "npx prisma studio",
-    "prisma:seed": "npx prisma db seed",
-    "prisma:push": "npx prisma db push",
-    "prisma:pull": "npx prisma db pull",
-    "prisma:viewer": "npx prisma migrate dev --create-only",
-    "prisma:create": "npx prisma migrate dev",
-    "prisma:deploy": "npx prisma migrate deploy",
+    "prisma:generate": "bunx prisma generate",
+    "prisma:studio": "bunx prisma studio",
+    "prisma:seed": "bunx prisma db seed",
+    "prisma:push": "bunx prisma db push",
+    "prisma:pull": "bunx prisma db pull",
+    "prisma:viewer": "bunx prisma migrate dev --create-only",
+    "prisma:create": "bunx prisma migrate dev",
+    "prisma:deploy": "bunx prisma migrate deploy",
     "prepare": "husky install",
     "commit": "cz",
     "lint-staged": "lint-staged",
@@ -82,7 +82,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.13",
@@ -90,6 +90,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "bun-types": "1.0.3",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.42.0",
