feat(api): get profile user depend on jwt information

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "nest build",
     "format": "prettier --write src/**/*.ts test/**/*.ts",
     "start": "nest start",
-    "start:dev": "nest start --watch --exec \"bun run\"",
+    "start:dev": "nest start --watch",
+    "start:bun": "nest start --watch --exec \"bun run\"",
     "start:pro": "bun run dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -90,7 +91,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "bun-types": "1.0.3",
+    "bun-types": "latest",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.42.0",
