--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
-    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.3.1",
     "cache-manager": "^5.2.3",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -74,7 +73,8 @@
     "pino-pretty": "^10.2.0",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ua-parser-js": "^1.0.36"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
