--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash": "^4.17.21",
     "nestjs-pino": "^3.5.0",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pino-http": "^8.5.0",
@@ -88,6 +89,7 @@
     "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.13",
+    "@types/passport-github2": "^1.2.6",
     "@types/passport-google-oauth20": "^2.0.12",
     "@types/passport-jwt": "^3.0.10",
     "@types/supertest": "^2.0.12",
