--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.6",
     "@nestjs/swagger": "^7.1.12",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.3.1",
     "cache-manager": "^5.2.3",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -77,7 +78,7 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
-    "ua-parser-js": "^1.0.36"
+    "ua-parser-js": "2.0.0-beta.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
