--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: '3.8'
 
 services:
+  backend-api:
+    container_name: backend-api
+    image: backend-api
+    build: ./
+    restart: always
+    ports:
+      - 3333:3333
+    env_file: .env
+    networks:
+      - nestjs-postgres
+      - nestjs-cache
+    depends_on:
+      - postgres
+      - redis
+
   postgres:
     container_name: postgres_database
     image: postgres:16
@@ -15,6 +30,8 @@ services:
       - postgres_db:/var/lib/postgresql/data
     env_file:
       - .env
+    networks:
+      - nestjs-postgres
 
   redis:
     container_name: redis
@@ -27,7 +44,15 @@ services:
       - redis:/data
     env_file:
       - .env
+    networks:
+      - nestjs-cache
 
 volumes:
   redis:
   postgres_db:
+
+networks:
+  nestjs-postgres:
+    driver: bridge
+  nestjs-cache:
+    driver: bridge
