--- a/package.json
+++ b/package.json
@@ -47,20 +47,20 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.0.0",
     "@fastify/static": "^6.11.2",
-    "@fastify/swagger": "^8.10.1",
+    "@fastify/swagger": "8.11.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/cache-manager": "^2.1.0",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.2.6",
-    "@nestjs/swagger": "^7.1.12",
+    "@nestjs/swagger": "^7.1.13",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.3.1",
-    "cache-manager": "^5.2.3",
+    "@prisma/client": "^5.4.2",
+    "cache-manager": "^5.2.4",
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -73,7 +73,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pino-http": "^8.5.0",
-    "pino-pretty": "^10.2.0",
+    "pino-pretty": "^10.2.3",
+    "prisma": "^5.4.2",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
@@ -81,41 +82,40 @@
     "ua-parser-js": "2.0.0-beta.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
+    "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@nestjs/cli": "^10.1.18",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.7",
+    "@types/express": "^4.17.19",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.199",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.8.5",
     "@types/passport": "^1.0.13",
     "@types/passport-github2": "^1.2.6",
     "@types/passport-google-oauth20": "^2.0.12",
     "@types/passport-jwt": "^3.0.10",
     "@types/request-ip": "^0.0.39",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/supertest": "^2.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "bun-types": "latest",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.42.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.0",
-    "prisma": "^5.3.1",
+    "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "5.2.2"
   },
   "husky": {
     "hooks": {
