feat(api): upload profile with multipart/form-data

--- a/.env.local
+++ b/.env.local
@@ -133,7 +133,6 @@ GITHUB_CLIENT_SECRET=90a6b0e42c927e152503f39719sw3893cf2b342f
 GITHUB_CALLBACK_URL=http://localhost:3333/api/v1/auth/github-redirect
 GITHUB_SCOPE=user
 
-
 SWAGGER_ENABLE=true
 SWAGGER_NAME=admin
 SWAGGER_PASS=admin123!
@@ -143,3 +142,10 @@ IOREDIS_HOST=localhost
 IOREDIS_PORT=6379
 IOREDIS_PASSWORD=redis_pass
 IOREDIS_USERNAME=default
+
+AWS_REGION=ap-southeast-1
+AWS_ACCESS_KEY=AKIFFFCJMCAWQYRZUV6
+AWS_SECRET_ACCESS_KEY=/fpva55Xe9u0VO1234561MjFd2323432
+
+AWS_BUCKET_PUBLIC=nestjs-public
+AWS_BUCKET_SECRET=nestjs-secret
