--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "release": "standard-version --no-verify"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.428.0",
+    "@aws-sdk/lib-storage": "^3.428.0",
     "@fastify/compress": "^6.4.0",
     "@fastify/cookie": "^9.1.0",
     "@fastify/csrf-protection": "^6.3.0",
