--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "prisma:viewer": "bunx prisma migrate dev --create-only",
     "prisma:create": "bunx prisma migrate dev",
     "prisma:deploy": "bunx prisma migrate deploy",
-    "prepare": "husky install",
     "commit": "cz",
     "lint-staged": "lint-staged",
+    "prepare": "husky install",
     "release": "standard-version --no-verify"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "@fastify/static": "^6.11.2",
     "@fastify/swagger": "8.11.0",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/bullmq": "^10.0.1",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "10.2.6",
     "@nestjs/config": "^3.1.1",
@@ -63,6 +64,7 @@
     "@nestjs/swagger": "^7.1.13",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.4.2",
+    "bullmq": "^4.12.4",
     "cache-manager": "^5.2.4",
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
@@ -84,6 +86,7 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
+    "sharp": "0.33.0-alpha.9",
     "ua-parser-js": "2.0.0-beta.1"
   },
   "devDependencies": {
