feat(queue): add UI bullboard to tracing process and state of job task

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@aws-sdk/client-s3": "^3.428.0",
     "@aws-sdk/cloudfront-signer": "^3.428.0",
     "@aws-sdk/lib-storage": "^3.428.0",
+    "@bull-board/api": "^5.9.1",
+    "@bull-board/fastify": "^5.9.1",
+    "@bull-board/nestjs": "^5.9.1",
     "@fastify/compress": "^6.4.0",
     "@fastify/cookie": "^9.1.0",
     "@fastify/csrf-protection": "^6.3.0",
