--- a/package.json
+++ b/package.json
@@ -67,11 +67,12 @@
     "@nestjs/swagger": "^7.1.13",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.4.2",
-    "bullmq": "^4.12.4",
+    "bullmq": "^4.12.5",
     "cache-manager": "^5.2.4",
     "cache-manager-ioredis-yet": "^1.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv-parse": "^5.5.2",
     "dayjs": "^1.11.10",
     "fastify": "^4.23.2",
     "jsonwebtoken": "^9.0.2",
