--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "sharp": "0.33.0-alpha.9",
+    "stripe": "^14.1.0",
+    "ts-mixer": "^6.0.3",
     "ua-parser-js": "2.0.0-beta.1"
   },
   "devDependencies": {
