--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -12,8 +12,8 @@ env:
   ECR_ENVIRONMENT: ${{ github.head_ref || github.ref_name }}
 
 permissions:
-      id-token: write # required to use OIDC authentication
-      contents: read # required to checkout the code from the repo
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
 
 jobs:
   build:
@@ -21,6 +21,12 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -33,12 +39,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
-        run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY-$ECR_ENVIRONMENT:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY-$ECR_ENVIRONMENT:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY-$ECR_ENVIRONMENT:$IMAGE_TAG" >> $GITHUB_OUTPUT
+      - name: Build Docker Image to Amazon ECR
+        id: build-and-push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/arm64
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}-${{ env.ECR_ENVIRONMENT }}:${{ github.sha }}
