feat(cicd): apply cache docker layer to reduce time build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Buildx",
     "bullmq",
     "bunx",
     "commitlint",
@@ -11,6 +12,7 @@
     "livemode",
     "MAXAGE",
     "metatype",
+    "OIDC",
     "paralleldrive",
     "Parens",
     "Promtail",
