--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -52,27 +52,12 @@ jobs:
     needs: [defined-metadata, build-image]
     if: always() && (needs.defined-metadata.result == 'success' && needs.build-image.result == 'success' && !contains(needs.*.result, 'cancelled'))
     name: Deployment to ECS
-    runs-on: self-hosted
-    steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-session-name: OIDCSession
-        role-to-assume: ${{ secrets.AWS_IAM_ROLE_ASSUME }}
-        aws-region: ap-southeast-1
-
-    - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        task-definition: ${{ needs.defined-metadata.outputs.ecs-task-definition }}.json
-        container-name: ${{ needs.defined-metadata.outputs.ecs-container }}
-        image: ${{ inputs.ecr-image }}
-
-    - name: Deploy Amazon ECS task definition
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ needs.defined-metadata.outputs.ecs-service }}
-        cluster: ${{ needs.defined-metadata.outputs.ecs-cluster }}
-        wait-for-service-stability: true
+    uses: ./.github/workflows/call-deploy.yml
+    with:
+      ecs-task-definition: ${{ needs.defined-metadata.outputs.ecs-task-definition }}
+      ecs-container: ${{ needs.defined-metadata.outputs.ecs-container }}
+      ecs-service: ${{ needs.defined-metadata.outputs.ecs-service }}
+      ecs-cluster: ${{ needs.defined-metadata.outputs.ecs-cluster }}
+      ecr-image: ${{ needs.build-image.outputs.ecr-image }}
+    secrets:
+      AWS_IAM_ROLE_ASSUME: ${{ secrets.AWS_IAM_ROLE_ASSUME }}
