--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "cSpell.words": [
+    "awslogs",
+    "awsvpc",
     "Buildx",
     "bullmq",
     "bunx",
     "commitlint",
     "DDTHH",
+    "FARGATE",
     "fieldname",
     "gstatic",
     "jsdelivr",
@@ -16,7 +19,7 @@
     "paralleldrive",
     "Parens",
     "Promtail",
-    "Trường"
+    "ulimits"
   ],
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
