--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "DDTHH",
     "FARGATE",
     "fieldname",
+    "golevelup",
     "gstatic",
     "jsdelivr",
     "jwtid",
@@ -22,7 +23,7 @@
     "ulimits"
   ],
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
+    "source.organizeImports": true
   },
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#fa1b49",
