--- a/package.json
+++ b/package.json
@@ -23,16 +23,13 @@
     "start:pro": "bun run dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --detectOpenHandles --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "bunx prisma generate",
-    "prisma:studio": "bunx prisma studio",
-    "prisma:seed": "bunx prisma db seed",
     "prisma:push": "bunx prisma db push",
     "prisma:pull": "bunx prisma db pull",
-    "prisma:viewer": "bunx prisma migrate dev --create-only",
     "prisma:create": "bunx prisma migrate dev",
     "prisma:deploy": "bunx prisma migrate deploy",
     "commit": "cz",
@@ -98,6 +95,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "@golevelup/ts-jest": "^0.4.0",
     "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.7",
@@ -121,6 +119,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
@@ -154,6 +153,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
