feat(test): unit test s3 module

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@aws-sdk/client-s3": "^3.428.0",
     "@aws-sdk/cloudfront-signer": "^3.428.0",
     "@aws-sdk/lib-storage": "^3.428.0",
+    "@aws-sdk/util-stream-node": "^3.374.0",
     "@bull-board/api": "^5.9.1",
     "@bull-board/fastify": "^5.9.1",
     "@bull-board/nestjs": "^5.9.1",
@@ -111,6 +112,8 @@
     "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "aws-sdk-client-mock": "^3.0.0",
+    "aws-sdk-client-mock-jest": "^3.0.0",
     "bun-types": "latest",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -119,7 +122,6 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
