--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -11,7 +11,7 @@ on:
         required: true
     outputs:
       ecr-image:
-        description: "ecr image name"
+        description: 'ecr image name'
         value: ${{ jobs.build-image.outputs.ecr-image }}
 
 jobs:
@@ -20,51 +20,51 @@ jobs:
     outputs:
       ecr-image: ${{ steps.metadata-ecr.outputs.name }}
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-session-name: OIDCSession
-        role-to-assume: ${{ secrets.AWS_IAM_ROLE_ASSUME }}
-        aws-region: ap-southeast-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-session-name: OIDCSession
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ASSUME }}
+          aws-region: ap-southeast-1
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Generate metadata ECR
-      id: metadata-ecr
-      run: |
-        echo "name=${{ steps.login-ecr.outputs.registry }}/${{ inputs.repository-name }}:${{ github.sha }}" >> "$GITHUB_OUTPUT"
+      - name: Generate metadata ECR
+        id: metadata-ecr
+        run: |
+          echo "name=${{ steps.login-ecr.outputs.registry }}/${{ inputs.repository-name }}:${{ github.sha }}" >> "$GITHUB_OUTPUT"
 
-    - name: Build Docker Image to Amazon ECR
-      id: build-and-push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: Dockerfile
-        builder: ${{ steps.buildx.outputs.name }}
-        platforms: linux/arm64
-        push: true
-        tags: ${{ steps.metadata-ecr.outputs.name }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache-new
+      - name: Build Docker Image to Amazon ECR
+        id: build-and-push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/arm64
+          push: true
+          tags: ${{ steps.metadata-ecr.outputs.name }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
 
-    - name: Move cache
-      run: |
-        rm -rf /tmp/.buildx-cache
-        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
