feat(test): unit-test cover guard

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ POSTGRES_DB=
 POSTGRES_PORT=
 
 ## connection_limit: default CPU n core * 2 + 1 (my computer is Mac m1 8 core => 8 * 2 + 1 = 17 connections)
-DATABASE_URL=""
+DATABASE_URL=
 
 JWT_ACCESS_MAXAGE=
 JWT_ACCESS_PUBLIC=
