--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,6 +1,6 @@
 name: "\U0001F41B Bug report"
 description: "If something isn't working as expected \U0001F914"
-labels: ["bug"]
+labels: ['bug']
 body:
   - type: checkboxes
     attributes:
