--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
+  "material-icon-theme.activeIconPack": "nest",
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    "source.organizeImports": "explicit"
   },
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#fa1b49",
