--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@nestjs/swagger": "^7.1.13",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.4.2",
+    "@willsoto/nestjs-prometheus": "^6.0.0",
     "bullmq": "^4.12.5",
     "cache-manager": "^5.2.4",
     "cache-manager-ioredis-yet": "^1.2.2",
@@ -82,9 +83,11 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pino-http": "^8.5.0",
+    "pino-loki": "^2.1.3",
     "pino-pretty": "^10.2.3",
     "prisma": "^5.4.2",
     "prisma-pagination": "^0.2.3",
+    "prom-client": "^15.0.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
